# orbiter-ai

./: .gitignore  .last-branch  CLAUDE.md  LICENSE  README.md  mkdocs.yml  orbiter.db  prd.json  progress.txt  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
archive/2026-02-16-orbiter-framework/: prd.json
archive/2026-02-16-orbiter-observability/: prd.json
docs/: changelog.md  index.md
docs/contributing/: development.md  index.md  package-structure.md
docs/distributed/: architecture.md  workers.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: agents.md  hooks.md  memory.md  multimodal.md  running.md  server.md  streaming-events.md
docs/migration/: from-aworld.md  index.md
examples/advanced/: skill_agent.py  web_deploy.py
examples/distributed/: Dockerfile  docker-compose.yml  fastapi_sse.py  multi_agent.py  simple_chat.py
examples/multi_agent/: custom_agent.py  debate.py  deepresearch.py  master_worker.py  search_patterns.py  travel.py
examples/quickstart/: agents.yaml  cli_usage.py  config_driven.py  define_agent.py  handoff.py  hitl.py  hybrid_swarm.py  local_tool.py  mcp_tool.py  multi_root_agent.py  parallel_task.py  serving.py  use_llm.py  use_memory.py  use_trace.py  workflow.py
examples/training/: evolution_pipeline.py  trajectory_capture.py
tasks/: prd-orbiter-framework.md  prd-orbiter-observability.md  prd-orbiter-web.md  prd-sukuna-compat.md  prd.json
tests/integration/: conftest.py  test_a2a_protocol.py  test_agent_context.py  test_agent_memory.py  test_agent_streaming.py  test_agent_structured_output.py  test_agent_tools.py  test_branching_isolation.py  test_context_summarization.py  test_context_vector_injection.py  test_distributed_worker.py  test_dynamic_loading.py  test_eval_framework.py  test_handoff_memory.py  test_handoffs.py  test_learning_agent.py  test_mcp_large_output.py  test_mcp_progress_stream.py  test_mcp_stdio.py  test_memory_context_chain.py  test_memory_persistence.py  test_memory_vector.py  (+9 more)
(+31 files in other folders)
